<resources>

    <string name="app_name">Lunch List</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_lunch_list">Lunch List</string>
    <string name="name_label">Name:</string>
    <string name="address_label">Address:</string>
    <string name="radio_group_label_type">Type:</string>
    <string name="radio_button_label_takeout">Take-out</string>
    <string name="radio_button_label_sitdown">Sit-down</string>
    <string name="radio_button_label_delivery">Delivery</string>
    <string name="save_button_label">Save</string>
    <string name="add_menu_label">Add a Restaurant</string>
    <string name="pref_menu_label">Settings</string>
    <string name="feed_menu_label">RSS Feed</string>
    <string name="notes_hint">Notes:</string>
    <string name="feed_hint">Feed URL</string>
    <string name="row_image_description">An icon displaying the type of restauraunt</string>
    <string name="empty_list_text">Click the menu icon for the option to add a retaurant</string>
    <string name="sort_order_title">Sort Order</string>
    <string name="sort_order_summary">Choose the order the list uses</string>
    <string name="sort_order_dialog">Choose a sort order</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_feed">FeedActivity</string>

</resources>