<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
	<TableLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:stretchColumns="1" 
	    android:shrinkColumns="1" >
	    <TableRow>
	        <TextView android:text="@string/name_label" />
	        <EditText
	            android:inputType="text"
	            android:id="@+id/name" />
	    </TableRow>
		<TableRow>
	        <TextView android:text="@string/address_label" />
	        <AutoCompleteTextView
	            android:inputType="text"
	            android:id="@+id/addr" />
	    </TableRow>
	    <TableRow>
	        <TextView android:text="@string/radio_group_label_type" />
	        <RadioGroup android:id="@+id/types" >
	            <RadioButton 
	                android:id="@+id/sit_down"
	                android:text="@string/radio_button_label_sitdown" />
	            <RadioButton 
	                android:id="@+id/take_out"
	                android:text="@string/radio_button_label_takeout" />
	            <RadioButton 
	                android:id="@+id/delivery"
	                android:text="@string/radio_button_label_delivery" />
	        </RadioGroup>
	    </TableRow>
	    <TableRow>
	        <TextView android:text="@string/notes_label" />
	        <EditText 
	            android:id="@+id/notes"
	            android:hint="@string/notes_hint"
	            android:inputType="textMultiLine"
	            android:gravity="top"
	            android:lines="2"
	            android:scrollHorizontally="false"
	            android:maxLines="2" />
	    </TableRow>
	    <Button
	        android:id="@+id/save"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/save_button_label" />
	</TableLayout>
</ScrollView>
