<?xml version="1.0" encoding="utf-8"?>
<TabHost 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TabWidget 
            android:id="@android:id/tabs" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
	    <FrameLayout 
	        android:id="@android:id/tabcontent"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent">
		    <ListView 
			    android:id="@+id/restaurants"
			    android:layout_height="wrap_content"
			    android:layout_width="match_parent"  />
			<TableLayout 
			    android:id="@+id/details"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:stretchColumns="1" 
			    android:shrinkColumns="1" 
			    android:paddingTop="4dip" >
			    <TableRow>
			        <TextView
			            android:textColor="#0000ff"
			            android:text="@string/name_label" />
			        <EditText
			            android:inputType="text"
			            android:id="@+id/name"
			            android:textStyle="bold" />
			    </TableRow>
				<TableRow>
			        <TextView
			            android:textColor="#ff0000"
			            android:text="@string/address_label" />
			        <AutoCompleteTextView
			            android:inputType="text"
			            android:id="@+id/addr"
			            android:textStyle="italic" />
			    </TableRow>
			    <TableRow>
			        <TextView android:text="@string/radio_group_label_type" />
			        <RadioGroup android:id="@+id/types">
			            <RadioButton 
			                android:id="@+id/sit_down"
			                android:text="@string/radio_button_label_sitdown" />
			            <RadioButton 
			                android:id="@+id/take_out"
			                android:text="@string/radio_button_label_takeout" />
			            <RadioButton 
			                android:id="@+id/delivery"
			                android:text="@string/radio_button_label_delivery" />
			        </RadioGroup>
			    </TableRow>
			    <Button
			        android:id="@+id/save"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/save_button_label" />
			</TableLayout>
		</FrameLayout>
	</LinearLayout>
</TabHost>
